- validator on docker